--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
 			<div class="row">
 				<div class="col-lg-4 ml-auto text-center">
 					<i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-					<a href="tel://07015089898">电话：138-4287-0162</a>
+					<a href="tel://138-4287-0162">电话：138-4287-0162</a>
 				</div>
 				<div class="col-lg-4 mr-auto text-center">
 					<i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
 					<p>
-						<a href="mailto:info@daimon.com">邮件：info@yidaodalian.com</a>
+						<a href="mailto:info@yidaodalian.com">邮件：info@yidaodalian.com</a>
 					</p>
 				</div>
 			</div>
