--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				<div class="col-lg-8 mx-auto text-center">
 					<h2 class="section-heading">联系我们</h2>
 					<hr class="my-4"></hr>
-					<p class="mb-5">公司地址：中国辽宁省大连市高新区普罗旺斯二期25栋2602号</p>
+					<p class="mb-5">公司地址：中国辽宁省大连市高新区</p>
 				</div>
 			</div>
 			<div class="row">
